--- a/style.css
+++ b/style.css
@@ -347,6 +347,10 @@ a:focus {
   margin: 5px 0;
 }
 
+.panel-collapse > hr {
+  margin: 5px 0 0 0;
+}
+
 .download {
   display: flex;
   justify-content: space-between;
@@ -360,14 +364,18 @@ a:focus {
   background-color: #F2F4F3;
 }
 
+.website-thumbnail {
+  width: 100%;
+}
+
 .download h3 {
   font-size: 16px;
   color: #333333;
   margin: 0;
 }
 
-.download > h4 {
-  font-size: 16px;
+.download h4 {
+  font-size: 14px;
   margin: 0;
 }
 
@@ -395,6 +403,12 @@ a:focus {
 .social-thumbnail {
   max-width: 30px;
   max-height: 30px;
+}
+
+.social-thumbnail-mini {
+  max-width: 20px;
+  max-height: 20px;
+  margin-left: 10px;
 }
 
 @media (max-width: 1024px) {
